Fix alignments on smallest sizes

--- a/app/assets/stylesheets/views/homepage.scss
+++ b/app/assets/stylesheets/views/homepage.scss
@@ -291,11 +291,11 @@
         background-image: image-url('homepage/ig-935px.jpg');
         background-position: bottom right;
         text-align:right;
-        padding-right:1em;
+        padding-right:5.5em;
       }
 
       @media(max-width: 500px) {
-        height:252px;
+        height:257px;
         background-image: image-url('homepage/ig-500px.jpg');
         background-position: bottom right;
         text-align:right;
